@@ -85,6 +85,7 @@
 - NEW: Adjusting externals to a fixed revision when 
        branching/tagging. (Stefan)
 - NEW: Filter matches in the log dialog are highlighted. (Stefan)
+- NEW: Custom Win7 Library for SVN working copies. (Stefan)
 - BUG: Merged revisions must be counted only 
        once in stats (Stefan Fuhrmann)
 - BUG: Relative Webviewer urls didn't work from the 
